--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: PWWPCHE
+description: No description here
 
-url: http://brianmaierjr.github.com/long-haul
+url: https://github.com/pwwpche
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -19,9 +19,7 @@ navigation:
    url: /contact
 
 social:
-   github: brianmaierjr
-   twitter: brianmaierjr
-   facebook: brianmaierjr
-   email: brimaidesigns@gmail.com
+   github: pwwpche
+   email: pwwpche@gmail.com
 
-google_analytics: "UA-58263416-1"
+google_analytics: ""
