--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ paginate: 5
 navigation:
  - title: Home
    url: /index.html
+ - title: Articles
+   url: /articles
  - title: About
    url: /about
  - title: Contact
